bổ sung constructor Brick & sửa kích cỡ gạch

--- a/DOAN/DOAN.vcxproj
+++ b/DOAN/DOAN.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Console.cpp" />
+    <ClCompile Include="DataPos.cpp" />
     <ClCompile Include="Display.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mathfunction.cpp" />
@@ -144,9 +145,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BackGround.hpp" />
-    <ClInclude Include="Ball.h" />
+    <ClInclude Include="Ball.hpp" />
     <ClInclude Include="Brick.hpp" />
     <ClInclude Include="Console.h" />
+    <ClInclude Include="DataPos.hpp" />
     <ClInclude Include="Define_Header.h" />
     <ClInclude Include="Display.hpp" />
     <ClInclude Include="mathfunction.hpp" />
