--- a/DOAN/DOAN.vcxproj.filters
+++ b/DOAN/DOAN.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="DataPos.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="buildStage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Paddle.h">
@@ -96,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Ball.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="buildStage.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
