cập nhật .h normalBrick

--- a/DOAN/DOAN.vcxproj.filters
+++ b/DOAN/DOAN.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="rewardItem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="normalBrick.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BackGround.hpp">
@@ -96,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Paddle.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="normalBrick.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
