--- a/DOAN/DOAN.vcxproj
+++ b/DOAN/DOAN.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mathfunction.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="normalBrick.cpp" />
     <ClCompile Include="Paddle.cpp" />
     <ClCompile Include="PvsP.cpp" />
     <ClCompile Include="rewardItem.cpp" />
@@ -153,6 +154,7 @@
     <ClInclude Include="Display.hpp" />
     <ClInclude Include="mathfunction.hpp" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="normalBrick.hpp" />
     <ClInclude Include="Object.hpp" />
     <ClInclude Include="Paddle.hpp" />
     <ClInclude Include="PvsP.hpp" />
