đa luồng tạo 2 banh

--- a/DOAN/DOAN.vcxproj
+++ b/DOAN/DOAN.vcxproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <ClCompile Include="BackGround.cpp" />
     <ClCompile Include="Ball.cpp" />
+    <ClCompile Include="BallsHandler.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="buildStage.cpp" />
     <ClCompile Include="DataPos.cpp" />
@@ -147,6 +148,7 @@
   <ItemGroup>
     <ClInclude Include="BackGround.hpp" />
     <ClInclude Include="Ball.hpp" />
+    <ClInclude Include="BallsHandler.h" />
     <ClInclude Include="Brick.hpp" />
     <ClInclude Include="buildStage.hpp" />
     <ClInclude Include="DataPos.hpp" />
