--- a/DOAN/DOAN.vcxproj
+++ b/DOAN/DOAN.vcxproj
@@ -136,11 +136,14 @@
     <ClCompile Include="buildStage.cpp" />
     <ClCompile Include="DataPos.cpp" />
     <ClCompile Include="Display.cpp" />
+    <ClCompile Include="Help.cpp" />
     <ClCompile Include="highScore.cpp" />
+    <ClCompile Include="levelChoice.cpp" />
     <ClCompile Include="listHighScore.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mathfunction.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="modeGame.cpp" />
     <ClCompile Include="NormalBrick.cpp" />
     <ClCompile Include="Paddle.cpp" />
     <ClCompile Include="PvsP.cpp" />
@@ -158,10 +161,13 @@
     <ClInclude Include="DataPos.hpp" />
     <ClInclude Include="Define_Header.h" />
     <ClInclude Include="Display.hpp" />
+    <ClInclude Include="Help.hpp" />
     <ClInclude Include="highScore.hpp" />
+    <ClInclude Include="levelChoice.hpp" />
     <ClInclude Include="listHighScore.hpp" />
     <ClInclude Include="mathfunction.hpp" />
-    <ClInclude Include="Menu.h" />
+    <ClInclude Include="Menu.hpp" />
+    <ClInclude Include="modeGame.hpp" />
     <ClInclude Include="NormalBrick.hpp" />
     <ClInclude Include="Object.hpp" />
     <ClInclude Include="Paddle.hpp" />
