continue game ver2

--- a/DOAN/DOAN.vcxproj
+++ b/DOAN/DOAN.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="buildStage.cpp" />
     <ClCompile Include="ComputerPlay.cpp" />
+    <ClCompile Include="continueGame.cpp" />
     <ClCompile Include="DataPos.cpp" />
     <ClCompile Include="Display.cpp" />
     <ClCompile Include="Help.cpp" />
@@ -160,6 +161,7 @@
     <ClInclude Include="Brick.hpp" />
     <ClInclude Include="buildStage.hpp" />
     <ClInclude Include="ComputerPlay.hpp" />
+    <ClInclude Include="continueGame.hpp" />
     <ClInclude Include="DataPos.hpp" />
     <ClInclude Include="Define_Header.h" />
     <ClInclude Include="Display.hpp" />
