--- a/DOAN/DOAN.vcxproj
+++ b/DOAN/DOAN.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="modeGame.cpp" />
     <ClCompile Include="NormalBrick.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="Paddle.cpp" />
     <ClCompile Include="PvsP.cpp" />
     <ClCompile Include="rewardItem.cpp" />
